# client-ts

./: .gitignore  .gitmodules  .mise.toml  .nil-sdk.toml  .prettierignore  .prettierrc.yaml  README.md  biome.jsonc  buf.gen.yaml  buf.yaml  commitlint.config.mjs  commitlint.config.ts  eslint.config.mjs  justfile  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.common.json  tsconfig.json  tsconfig.typedoc.json  typedoc.json
.github/workflows/: cd.yaml  check-build-test.yaml  check-test-publish.yaml  ci.yaml  docs.yaml  publish.yaml
.husky/: commit-msg  pre-commit
client-react-hooks/: README.md  esbuild.config.mjs  package.json  tsconfig.build.json  tsconfig.json
client-react-hooks/src/: cache-key.ts  create-client.ts  index.ts  keplr.ts  logger.ts  logging.ts  nil-hook-base.ts  nillion-provider.tsx  query-cache.ts  use-nil-account-balance.ts  use-nil-add-funds.ts  use-nil-compute-output.ts  use-nil-compute.ts  use-nil-delete-value.ts  use-nil-delete-values.ts  use-nil-fetch-value.ts  use-nil-invoke-compute.ts  use-nil-overwrite-permissions.ts  use-nil-pool-status.ts  use-nil-retrieve-compute-results.ts  use-nil-retrieve-permissions.ts  (+9 more)
client-vms/: .env  .env.test  esbuild.config.mjs  jest.config.ts  package.json  tsconfig.json  typedoc.json  vitest.config.ts
client-wasm/: Cargo.toml  LICENSE  commit-sha.txt  package.json  rust-toolchain.toml  rustfmt.toml
client-wasm/src/: errors.rs  index.js  lib.rs  program.rs  values.rs
examples-nextjs/: next.config.mjs  package.json  tsconfig.json
(+208 files in other folders)
