[package]
name = "client-wasm"
version = "0.2.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.92"
js-sys = "0.3"

nillion-client-core = { path = "../nillion/libs/client-core" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O0", "--strip-debug"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--strip-debug"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
dwarf-debug-info = false
